--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Global
+.DS_Store
+
 # Node
 node_modules
 
@@ -23,6 +26,7 @@ xcuserdata/
 ## Other
 *.moved-aside
 *.xcuserstate
+project.xcworkspace
 
 ## Obj-C/Swift specific
 *.hmap
