--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,5 @@
+version: 2.0
+
 attach_workspace: &attach_workspace
   attach_workspace:
     at: ~/react-native-twilio-video-webrtc
@@ -6,7 +8,7 @@ docker_defaults: &docker_defaults
   docker:
     - image: circleci/python:3.6.4-stretch-node-browsers
   working_directory: ~/react-native-twilio-video-webrtc
-    
+
 jobs:
   build:
     <<: *docker_defaults
