--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,3 +43,12 @@ jobs:
       - run:
         name: Run tests
         command: yarn run ci
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
