--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,7 @@ jobs:
           paths:
             - node_modules
   test:
-    machine:
-      node:
-        version: 7.8.0
-      environment:
-        PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin"
+    <<: *docker_defaults
     steps:
       - checkout
       - *attach_workspace
