--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,5 @@
+version: 2.0
+
 attach_workspace: &attach_workspace
   attach_workspace:
     at: ~/react-native-twilio-video-webrtc
@@ -6,7 +8,7 @@ docker_defaults: &docker_defaults
   docker:
     - image: circleci/python:3.6.4-stretch-node-browsers
   working_directory: ~/react-native-twilio-video-webrtc
-    
+
 jobs:
   build:
     <<: *docker_defaults
@@ -30,14 +32,19 @@ jobs:
           paths:
             - node_modules
   test:
-    machine:
-      node:
-        version: 7.8.0
-      environment:
-        PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin"
+    <<: *docker_defaults
     steps:
       - checkout
       - *attach_workspace
       - run:
-        name: Run tests
-        command: yarn run ci
+          name: Run tests
+          command: yarn run ci
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
