--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -14,4 +14,15 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <application>
+        <activity android:name="com.twiliorn.library.ScreenCapturerActivity" />
+        <service
+            android:enabled="true"
+            android:name="com.twiliorn.library.ScreenCapturerService"
+            android:foregroundServiceType="mediaProjection">
+        </service>
+    </application>
+
+
 </manifest>
