--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,6 +50,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$androidSupportVersion"
     implementation "com.twilio:video-android:5.10.1"
-    implementation 'org.webrtc:google-webrtc:1.0.30039'
+    implementation "com.github.100mslive:webrtc:m94-4606"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
