--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$androidSupportVersion"
     implementation "com.twilio:video-android:6.3.1"
     implementation 'org.webrtc:google-webrtc:1.0.30039'
+    implementation 'androidx.annotation:annotation:1.2.0'
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
