--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "babel-eslint": "^7.2.3",
     "del": "^3.0.0",
     "doctoc": "^1.3.0",
+    "expo": "^47.0.0",
+    "expo-build-properties": "^0.5.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-load-plugins": "^1.5.0",
@@ -35,6 +37,14 @@
     "gulp-tap": "^1.0.1",
     "react-docgen": "^2.15.0",
     "standard": "^13.1.0"
+  },
+  "peerDependencies": {
+    "expo": ">=47.0.0"
+  },
+  "peerDependenciesMeta": {
+    "expo": {
+      "optional": true
+    }
   },
   "dependencies": {
     "prop-types": "^15.5.10"
