--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "standard": "^13.1.0"
   },
   "peerDependencies": {
-    "expo": ">=47.0.0"
+    "expo": ">=47.0.0",
+    "expo-build-properties": ">=0.5.1"
   },
   "peerDependenciesMeta": {
     "expo": {
