--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "description": "Twilio Video WebRTC for React Native.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "expo-module build",
+    "clean": "expo-module clean",
+    "test": "expo-module test",
     "lint": "standard 'src/**/*.js'",
     "lint:fix": "standard 'src/**/*.js' --fix",
     "ci": "yarn lint"
@@ -30,6 +32,7 @@
     "doctoc": "^1.3.0",
     "expo": "^47.0.0",
     "expo-build-properties": "^0.5.1",
+    "expo-module-scripts": "^3.0.7",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-load-plugins": "^1.5.0",
