--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "description": "Twilio Video WebRTC for React Native.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "expo-module build",
+    "clean": "expo-module clean",
+    "test": "expo-module test",
     "lint": "standard 'src/**/*.js'",
     "lint:fix": "standard 'src/**/*.js' --fix",
     "ci": "yarn lint"
@@ -28,6 +30,9 @@
     "babel-eslint": "^7.2.3",
     "del": "^3.0.0",
     "doctoc": "^1.3.0",
+    "expo": "^47.0.0",
+    "expo-build-properties": "^0.5.1",
+    "expo-module-scripts": "^3.0.7",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-load-plugins": "^1.5.0",
@@ -35,6 +40,15 @@
     "gulp-tap": "^1.0.1",
     "react-docgen": "^2.15.0",
     "standard": "^13.1.0"
+  },
+  "peerDependencies": {
+    "expo": ">=47.0.0",
+    "expo-build-properties": ">=0.5.1"
+  },
+  "peerDependenciesMeta": {
+    "expo": {
+      "optional": true
+    }
   },
   "dependencies": {
     "prop-types": "^15.5.10"
