--- a/expo-example/package.json
+++ b/expo-example/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "expo": "~48.0.18",
     "expo-build-properties": "~0.6.0",
+    "expo-file-system": "~15.2.2",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-twilio-video-webrtc": "link:../",
-    "expo-splash-screen": "~0.18.2"
+    "react-native-twilio-video-webrtc": "link:../"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
