revert changes to Example/package.json

--- a/Example/package.json
+++ b/Example/package.json
@@ -8,14 +8,14 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.9",
-    "react-native-twilio-video-webrtc": "file:../"
+    "react-native": "0.59.9"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "babel-jest": "24.8.0",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "^0.51.1",
+    "react-native-twilio-video-webrtc": "file:../",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
